# cube-solver

./: LICENCE  README.md  benchmark.py  cube_difficulty_categorizer.py  plot_comprehensive_analysis.py  pyproject.toml  requirements.txt
src/: __init__.py
src/ML_integration/: collect_training_data.py  cube_difficulty_categorizer.py  cube_ml_predictor.py
src/benchmark/: benchmark.py  cube_difficulty_categorizer.py  plot_comprehensive_analysis.py
src/cube_solver/: __init__.py  logger.py
src/cube_solver/cube/: cube.py  enums.py  maneuver.py  utils.py
src/cube_solver/solver/: __init__.py  defs.py  kociemba.py  solver.py  thistlethwaite.py  utils.py
tables/: pruning_kociemba.npz  pruning_korf.npz  pruning_thistlethwaite.npz  tables.txt  transition.npz
