[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cube-solver"
version = "0.1.0"
dependencies = [
  "numpy",
  "matplotlib>=3.5.0",
  "pandas>=1.3.0",
  "scikit-learn>=1.0.0",
  "xgboost>=1.5.0",
  "lightgbm>=3.3.0",
  "seaborn>=0.11.0",
  "psutil>=5.9.0"
]
requires-python = ">=3.9"
description = "Rubik's Cube Solver"

[project.scripts]
cube = "cube_solver.cli:app"